add conversion request validation
